# projects

./: .gitignore  README.md
BR-vk/: .clang-format  .gitignore  CMakeLists.txt  High-level documentation.md  README.md  VkInstance.cpp  VkInstance.h  imgui.ini  learning-notes.md  main.cpp
BR-vk/render/: BRCameraManip.cpp  BRCameraManip.h  BRManip.cpp  BRManip.h  BRModelManip.cpp  BRModelManip.h  BRRaster.cpp  BRRaster.h  BRRayTracer.cpp  BRRayTracer.h  BRRender.cpp  BRRender.h  BRScene.cpp  BRScene.h  CMakeLists.txt  VkRender.cpp  VkRender.h
BR-vk/shaders/: CMakeLists.txt  closesthit.rchit  miss.rmiss  raygen.rgen  rng.glsl  shader.frag  shader.vert
BR-vk/vulkan/: BRASBuilder.cpp  BRASBuilder.h  BRAppState.cpp  BRAppState.h  BRBufferAllocator.cpp  BRBufferAllocator.h  BRCommandPool.cpp  BRCommandPool.h  BRDebug.cpp  BRDebug.h  BRDescMgr.cpp  BRDescMgr.h  BRDevice.cpp  BRDevice.h  BRFramebuffer.cpp  BRFramebuffer.h  BRInstance.cpp  BRInstance.h  BRMemoryMgr.cpp  BRMemoryMgr.h  BRPipeline.cpp  BRPipeline.h  BRRTPipeline.cpp  BRRTPipeline.h  BRRasterPipeline.cpp  BRRasterPipeline.h  BRRenderPass.cpp  BRRenderPass.h  BRSurface.cpp  BRSurface.h  BRSwapchain.cpp  BRSwapchain.h  BRSyncMgr.cpp  BRSyncMgr.h  BRUtil.h  BRVBOMgr.cpp  BRVBOMgr.h  CMakeLists.txt  Util.h
vk-rtx-pathtrace/: README.md  vk-rtx-pathtrace.sln
vk-rtx-pathtrace/VkExample1/: VkExample1.vcxproj  VkExample1.vcxproj.filters  hello_vulkan.cpp  imgui.ini  main.cpp
vk-rtx-pathtrace/VkExample1/shaders/: closesthitSphere.rchit  closesthitSphere.rchit.spv  intersect.rint  intersect.rint.spv
vk-rtx-pathtrace/common/: GLSLValidateTargets.props  GLSLValidateVS.props  obj_loader.h  vk_context.cpp  vk_context.h
vk-rtx-pathtrace/libs/imgui/: imgui_impl_glfw_vulkan.cpp
vk-rtx-pathtrace/libs/vulkannv/nv_helpers_vk/: BottomLevelASGenerator.cpp  BottomLevelASGenerator.h
vk-rtx-pathtrace/shaders/: closesthitSphere.rchit  closesthitSphere.rchit.spv  intersect.rint  intersect.rint.spv  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv  rng.glsl
vk-rtx-pathtrace/src/: hello_vulkan.cpp  hello_vulkan.h  main.cpp  renderer.cpp  renderer.h  scene.h  utility.cpp  utility.h
